--- a/HW9-final/scss/home/_fonts.scss
+++ b/HW9-final/scss/home/_fonts.scss
@@ -33,3 +33,12 @@
     url(../../fonts/lucida_regular/LucidaGrande.woff) format("woff"),
     url(../../fonts/lucida_regular/LucidaGrande.woff2) format("woff2");
 }
+
+@font-face {
+  font-family: 'LucidaGrande-light';
+  src:
+    url(../../fonts/hindi-light/HindSiliguri-Light.eot?) format("eot"),
+    url(../../fonts/hindi-light/HindSiliguri-Light.ttf) format("truetype"),
+    url(../../fonts/hindi-light/HindSiliguri-Light.woff) format("woff"),
+    url(../../fonts/hindi-light/HindSiliguri-Light.woff2) format("woff2");
+}
