--- a/HW14-DOM-Overview/css/home/home-main.css
+++ b/HW14-DOM-Overview/css/home/home-main.css
@@ -1759,6 +1759,7 @@ body {
   box-sizing: border-box;
   position: relative;
   border-radius: 5px;
+  margin-bottom: 20px;
   position: relative;
   float: left;
   width: 100%;
@@ -1799,10 +1800,10 @@ body {
 .about__icon:nth-child(1), .about__icon:nth-child(2) {
   margin-bottom: 20px;
 }
-.about__icon:nth-child(1)::after, .about__icon:nth-child(3)::after {
+.about__icon:nth-child(odd)::after {
   right: -5px;
 }
-.about__icon:nth-child(2)::after {
+.about__icon:nth-child(even)::after {
   left: -5px;
 }
 .about__icon--green {
