--- a/src/scss/blog/_styles.scss
+++ b/src/scss/blog/_styles.scss
@@ -1,15 +1,20 @@
 html {
   font-size: $fontSize;
+  min-height: 100vh;
 }
 
 body {
   width: 100%;
+  min-height: 100vh;
 }
 
 .wrapper {
   max-width: 1440px;
   min-width: 320px;
   margin: 0 auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -185,6 +190,7 @@ body {
 
 #posts {
   width: 100%;
+  flex-grow: 1;
 }
 
 .posts {
