--- a/src/scss/blog/_styles.scss
+++ b/src/scss/blog/_styles.scss
@@ -441,6 +441,15 @@ body {
     box-shadow: 0 2px 20px 7px rgba(131, 131, 131, 0.5);
   }
 
+  &__absent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+    font-size: 2em;
+  }
+
   &__load {
     @include button;
 
