HW26-Patterns: update readme, add default picture, fix bug delete item

--- a/src/scss/app/_styles.scss
+++ b/src/scss/app/_styles.scss
@@ -187,6 +187,11 @@ body {
   margin-top: 10px;
   margin-bottom: 80px;
 
+  &__default {
+    width: 100%;
+    height: auto;
+  }
+
   .post {
     border-radius: 5px;
     background: $descriptionBackground;
